Revert "Solved issue #27674 by hiding overflow of container-main class"
This reverts commit e0d2b47b274856d90350624af60a4b7b881eb6f6.

--- a/administrator/templates/atum/scss/blocks/_global.scss
+++ b/administrator/templates/atum/scss/blocks/_global.scss
@@ -109,7 +109,6 @@ body .container-main {
   min-height: calc(100vh - #{$header-height} - 3px);
   padding-left: 0;
   padding-right: 0;
-  overflow: hidden;
 
   &::before,
   &::after {
